--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -70,12 +70,60 @@ table {
 
 */
 
+/*Screen Formatting Here*/
+
+/*==================================================
+=           Standard Media Queries             =
+==================================================*/
+
+
+
+
+    /*==========  Mobile First Method  ==========*/
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (min-width : 320px) {
+
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (min-width : 480px) {
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+
+    	header, main, footer {
+
+    		max-width: 1280px;
+    		margin: 0 auto;
+    	}
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+
+    }
+
+.container {
+	max-width: 1024px;
+	margin: 0 auto;
+}
+
+
 /************************
 		MOBILE FIRST
 ************************/
 
 /*Major containers set to 100% width to achieve Fluid Layout */
-.col-main-article, .col-footer, img {
+.col-main-article, .col-footer, .mobile-img{
 	width:100%;
 }
 
@@ -185,10 +233,56 @@ table {
 
 /*Main Content Styles Begin Here*/
 
+/*Header Styles*/
+
+header {
+	background: #72a9ae;
+}
+
 body {
-	background-image: url(../img/foggybirds.png);
+	background: #ffffff;
 }
 
 .site-content {
+	background: url(../img/foggybirds.png);
+	padding: 15px; 
+	width: 100%;
+	box-sizing: border-box;
 
+}
+
+.main-section {
+	float: left;
+	width: 70%;
+	padding: 25px;
+	box-sizing: border-box;
+}
+
+#img-aside: {
+	float: left;
+	width: 30%;
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+.schedule-section {
+	width: 100%; 
+}
+
+.sched-table {
+	float: center;
+}
+
+
+table { 
+
+width: 100%;
+padding-left:-10px;
+padding-right: -10px;
+
+ }
+
+table, th, td {
+	border: 1px solid black;
+	padding: 5px;
 }
