--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 
-@import url(@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
-@import url('../fonts/peacesans_regular_macroman/stylesheet.css')
-
  /*http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -132,6 +129,9 @@ table {
 	width: 120px;
 	padding: 15px;
 	box-sizing: border-box;
+	font-family: 'peacesans_regular_macroman';
+	color: #72a9ae;
+	font-size: 225%
 }
 
 .desktop-nav {
@@ -165,7 +165,7 @@ table {
 	box-sizing: border-box;
 	width: 100%;
 	padding: 10px;
-	borde-left: 2px solid #444;
+	border-left: 2px solid #444;
 }
 .desktop-nav li {
 	width: 100%;
@@ -233,11 +233,34 @@ table {
 
 /*Main Content Styles Begin Here*/
 
+/*Font Styling*/
+
+.text {
+
+font-family: 'Noto Sans', sans-serif;
+
+}
+
+h2 {
+	font-weight: bold;
+	color: #72a9ae;
+	font-size: 125%;
+}
+
+thead {
+	font-weight: bold;
+	color: #72a9ae;
+}
+
 /*Header Styles*/
 
 header {
 	background: #72a9ae;
+	margin-top: -50px;
 }
+
+
+/*Body Styles*/
 
 body {
 	background: #ffffff;
@@ -250,6 +273,9 @@ body {
 	box-sizing: border-box;
 
 }
+
+
+/*About and Image Aside*/
 
 .main-section {
 	float: left;
@@ -274,15 +300,45 @@ body {
 }
 
 
+/*Schedule Table*/
+
+.schedule-section {
+	float: left;
+	padding: 10px;
+}
+
 table { 
 
 width: 100%;
 padding-left:-10px;
 padding-right: -10px;
-
+text-align: center;
+box-sizing: border-box;
  }
 
 table, th, td {
 	border: 1px solid black;
-	padding: 5px;
+	padding: 10px;
 }
+
+/*Profile Information*/
+
+.profile-form {
+	float: left;
+	box-sizing: border-box;
+	padding: 10px;
+	width: 50%;
+
+}
+
+
+.profile-transf {
+	float: left;
+	box-sizing: border-box;
+	padding: 20px;
+	width: 50%;
+
+}
+
+
+
