--- a/lib2024/final/css/fonts.css
+++ b/lib2024/final/css/fonts.css
@@ -1,4 +1,4 @@
 @charset "utf-8";
 
-@import url(@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
 @import url('../fonts/peacesans_regular_macroman/stylesheet.css')
