--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -67,6 +67,7 @@ table {
 	Light Grey: #efefef;
 	Dark Grey : #454545;
 	White : #ffffff;
+	Purple: #728bae;
 
 */
 
@@ -388,7 +389,59 @@ footer {
 	width: 150px;
 	height: 150px;
 	margin: -75px 0 0 -75px;
-	border: 16px solid; #
+	border: 16px solid #3498db;
+
+	animation:
+		spin 2s linear infinite,
+		change-color 4s ease-in-out infinite,
+		border-radius-change 1s ease infinite;
+
+}
+
+@keyframes spin {
+	from{
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(360deg)
+	}
+}
+
+@keyframes change-color {
+
+	0% {
+		border-top-color: #72a9ae;
+	}
+
+	50% {
+
+		border-top-color: #728bae;
+	}
+
+	100% {
+
+		border-top-color: #72a9ae;
+	}
+}
+
+@keyframes border-radius-change {
+
+	0% {
+
+		border-radius: 50%;
+	}
+
+	50% {
+
+		border-radius: 0%;
+
+	}
+
+	100% {
+
+		border-radius: 50%
+	}
 }
 
 /*==================================================
