--- a/lib2024/final/css/style.css
+++ b/lib2024/final/css/style.css
@@ -148,13 +148,12 @@ h4 {
 }
 
 .desktop-nav ul {
-	width: 100%
+	width: 50%
 }
 
 .desktop-nav li {
 	max-width: 20%
 	float: left;
-	padding: 10px;
 	box-sizing: border-box;
 	position: relative;
 }
@@ -173,9 +172,10 @@ h4 {
 
 .main-nav-container a {
 	display: block;
+	float: left;
 	box-sizing: border-box;
 	width: 20%;
-	padding: 10px;
+	padding: 15px;
 	color: #000000;
 }
 
