--- a/lib2024/final/css/fonts.css
+++ b/lib2024/final/css/fonts.css
@@ -2,3 +2,5 @@
 
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
 @import url('../fonts/peacesans_regular_macroman/stylesheet.css')
+
+}
